fix: vertical align to top for dates

--- a/css/foundation-emails.css
+++ b/css/foundation-emails.css
@@ -1377,3 +1377,7 @@ body.outlook p {
     padding: 0 !important;
   }
 }
+
+th {
+  vertical-align: top !important;
+}
